<resources>
    <string name="app_name">AwesomeEnglish</string>
    <string name="search_hint"><font size="14">Search or type your word</font></string>
    <string name="launchpad">Launchpad</string>
    <string name="slogan">Search from billieant words to your world</string>
    <string name="vocabulary_pack">Vocabulary pack</string>
    <string name="translate_text">Translate text</string>
    <string name="your_word">Your word</string>
    <string name="searched_word">Searched word</string>
    <string name="important_word">Important word</string>
    <string name="practicing">Practicing</string>
    <string name="setting">Setting</string>
    <string name="english_vietnamese">English - Vietnamese</string>
</resources>
